Fixed bug #61828 Memleak when calling Directory(Recursive)Iterator/Spl(Temp)FileObject ctor twice